# alert-dedupe

./: .env.example  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: scheduled.yml
src/alert_dedupe/: __init__.py  adapters.py  cli.py  config.py  dedupe.py  loader.py  models.py  reporting.py  signing.py
src/alert_dedupe/data/sample_feeds/: datadog_sample.json  generic_sample.json  pagerduty_sample.json
tests/: test_adapters.py  test_cli.py  test_config.py  test_dedupe.py  test_loader.py  test_reporting.py  test_signing.py
