[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alert-dedupe"
version = "0.1.0"
description = "Deterministic alert deduplication and grouping across pluggable webhook-file sources."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "cyntra360hub" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
alert-dedupe = "alert_dedupe.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
alert_dedupe = ["data/sample_feeds/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
